# sales-audio-ai

./: .gitignore  Makefile  README.md
.github/workflows/: desktop-package.yml
backend/: .env  .gitignore  main.py  requirements.txt
backend/api/: audio_controller.py  config_controller.py  dialog_controller.py
backend/core/: config.py  config_store.py  database.py  logger.py
backend/models/: audio_file.py  dialog_script.py  dialog_task.py
backend/services/: audio_merger.py  dialog_parser.py  llm_service.py  prompt_builder.py  tts_service.py
backend/storage/: app.db
desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/scripts/: dev-or-reuse.mjs
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AnalysisPanel.tsx  Dialog.tsx  Header.tsx  RecordPanel.tsx  ScoreCard.tsx  TranscriptPanel.tsx
desktop/src/components/config/: ConfigPlaceholder.tsx  ConfigSelect.tsx  StorageHeader.tsx
desktop/src/components/layout/: Sidebar.tsx
desktop/src/hooks/: useAudioPlayback.ts  useConversationGeneration.ts  useWorkspaceState.ts
desktop/src/pages/: AudioPage.tsx  GeneratePage.tsx  LlmConfigPage.tsx  PromptConfigPage.tsx  TaskCenterPage.tsx  TtsConfigPage.tsx
desktop/src/styles/: base.css  globals.css  layout.css  tokens.css
desktop/src/styles/components/: config.css  panels.css
desktop/src/styles/pages/: audio.css  generate.css  tasks.css
desktop/src/types/: index.ts
desktop/src/utils/: logger.ts
