[package]
name = "sales-audio-ai"
version = "1.0.0"
edition = "2021"

[lib]
name = "sales_audio_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sales-audio-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
base64 = "0.22.1"
hound = "3.5.1"
minimp3 = "0.5.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
